rating,recommend,comment

--- a/recommend.html
+++ b/recommend.html
@@ -7,7 +7,8 @@
 </head>
 <body>	
 	<div id ="container">
-		<h1 id ="papa"><a href = "homepage.html">Peta Pariwisata dan Kuliner kota Medan</a></h1>
+		<h1 id ="papa"><a href = "homepage.html">Papa Kuman</a></h1>
+		<h3>Peta Pariwisata dan Kuliner kota Medan</h3>
 	</div>
 	<div class="content">
 		<div class="menu">
