--- a/Hillpark Sibolangit/hillparkreview.html
+++ b/Hillpark Sibolangit/hillparkreview.html
@@ -5,13 +5,13 @@
 		<title>Peta Pariwisata dan Kuliner Medan</title>
 		<link rel="stylesheet" type="text/css"href="../homepage.css">
 		<link rel="stylesheet" type="text/css"href="../review.css">
-        <link rel="stylesheet" type="css/txt" href="../5 star/style.css">
+        <link rel="stylesheet" type="text/css" href="../5 star/style.css">
   		<script type="text/javascript" src="../5 star/rating.js"></script>
 
 	</head>
 	<body>	
 		<div id ="container">
-			<h1 id ="papa"><a href = "../homepage.html">Peta Pariwisata dan Kuliner kota Medan</a></h1>
+			<h1 id ="papa"><a href = "../homepage.html">Peta Pariwisata dan Kuliner Kota Medan</a></h1>
 			<div class="content">
 				<div class="menu">
 					<p id="paragraf">Hillpark Sibolangit merupakan  sebuah tempat yang wajib anda kunjungi apabila anda melancong ke kota Medan. 
