--- a/Rahmat International Museum/rahmatmuseumreview.html
+++ b/Rahmat International Museum/rahmatmuseumreview.html
@@ -5,18 +5,13 @@
 		<title>Peta Pariwisata dan Kuliner Medan</title>
 		<link rel="stylesheet" type="text/css"href="../homepage.css">
 		<link rel="stylesheet" type="text/css"href="../review.css">
-<link rel="stylesheet" type="css/txt" href="../5 star/style.css">
+        <link rel="stylesheet" type="text/css" href="../5 star/style.css">
   		<script type="text/javascript" src="../5 star/rating.js"></script>
 
 	</head>
 	<body>	
 		<div id ="container">
-<<<<<<< HEAD
-			<h1 id ="papa"><a href = "../homepage.html">Peta Pariwisata dan Kuliner Medan</a></h1>
-=======
-			<h1 id ="papa"><a href = "../homepage.html">Peta Pariwisata dan Kuliner kota Medan</a></h1>
->>>>>>> 4965b1699b2e7f9f9dd96ec9077bde5fbf642742
-			<h3>Peta Pariwisata dan Kuliner kota Medan</h3>
+			<h1 id ="papa"><a href = "../homepage.html">Peta Pariwisata dan Kuliner Kota Medan</a></h1>
 			<div class="content">
 				<div class="menu">
 					<p id="paragraf">Rahmat International Wildlife Museum & Gallery adalah merupakan sebuah tempat wisata yang sangat menarik dan unik di Kota Medan, Sumatera Utara. Museum dan galeri ini menyimpan beragam koleksi mengagumkan terdiri dari berbagai binatang liar diawetkan yang berasal dari tempat berburu di berbagai tempat di seluruh penjuru dunia.
