--- a/Rumah Tjong A Fie/tjongafiereview.html
+++ b/Rumah Tjong A Fie/tjongafiereview.html
@@ -5,14 +5,13 @@
 		<title>Peta Pariwisata dan Kuliner Medan</title>
 		<link rel="stylesheet" type="text/css"href="../homepage.css">
 		<link rel="stylesheet" type="text/css"href="../review.css">
-<link rel="stylesheet" type="css/txt" href="../5 star/style.css">
+        <link rel="stylesheet" type="text/css" href="../5 star/style.css">
   		<script type="text/javascript" src="../5 star/rating.js"></script>
 
 	</head>
 	<body>	
 		<div id ="container">
-			<h1 id ="papa"><a href = "../homepage.html">Peta Pariwisata dan Kuliner Medan</a></h1>
-			<h3>Peta Pariwisata dan Kuliner kota Medan</h3>
+			<h1 id ="papa"><a href = "../homepage.html">Peta Pariwisata dan Kuliner Kota Medan</a></h1>
 			<div class="content">
 				<div class="menu">
 					<p id="paragraf">Rumah Tjong A Fie atau Tjong A Fie Memorial Institute terletak di Jln. Jendral Ahmad Yani (Kesawan). Kesawan merupakan sebuah kawasan yang dipenuhi banyak bangunan-bangunan bersejarah dan Jalan Ahmad Yani adalah jalan yang tertua di kota Medan.
