--- a/Air Terjun Piso-Piso/sipisopisoreview.html
+++ b/Air Terjun Piso-Piso/sipisopisoreview.html
@@ -5,14 +5,12 @@
 		<title>Peta Pariwisata dan Kuliner Medan</title>
 		<link rel="stylesheet" type="text/css"href="../homepage.css">
 		<link rel="stylesheet" type="text/css"href="../review.css">
-		<link rel="stylesheet" type="css/txt" href="../5 star/style.css">
+		<link rel="stylesheet" type="text/css" href="../5 star/style.css">
   		<script type="text/javascript" src="../5 star/rating.js"></script>
-<!--<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">-->
 	</head>
 	<body>	
 		<div id ="container">
-			<h1 id ="papa"><a href = "../homepage.html">Peta Pariwisata dan Kuliner kota Medan</a></h1>
-			<h3>Peta Pariwisata dan Kuliner kota Medan</h3>
+			<h1 id ="papa"><a href = "../homepage.html">Peta Pariwisata dan Kuliner Kota Medan</a></h1>
 			<div class="content">
 				<div class="menu">
 					<p id="paragraf">Air Terjun Sipiso-piso merupakan salah satu tempat wisata di Pulau Sumatera. Berada di Kabupaten Karo, Sumatera Utara, yang tidak begitu jauh dari pemukiman penduduk Desa Tongging. Air terjun ini berada di perbukitan dengan ketinggian sekitar 800 mdpl dan dikelilingi oleh hutan pinus. Pengelolaan wisata alam air terjun ini dipegang oleh Pemda Kabupaten Karo. Dengan memiliki ketinggian sekitar 120 meter, Air Terjun Sipiso-piso merupakan salah satu air terjun tertinggi di Indonesia. Dengan adanya air terjun ini, Kabupaten Karo menjadi salah satu tempat wisata yang paling diminati oleh para wisatawan domestik dan mancanegara.
