--- a/Chat's Cafe Tarts and Pies/chatcafereview.html
+++ b/Chat's Cafe Tarts and Pies/chatcafereview.html
@@ -5,14 +5,13 @@
 		<title>Peta Pariwisata dan Kuliner Medan</title>
 		<link rel="stylesheet" type="text/css"href="../homepage.css">
 		<link rel="stylesheet" type="text/css"href="../review.css">
-<link rel="stylesheet" type="css/txt" href="../5 star/style.css">
+        <link rel="stylesheet" type="text/css" href="../5 star/style.css">
   		<script type="text/javascript" src="../5 star/rating.js"></script>
 
 	</head>
 	<body>	
 		<div id ="container">
-			<h1 id ="papa"><a href = "../homepage.html">Peta Pariwisata dan Kuliner kota Medan</a></h1>
-			<h3>Peta Pariwisata dan Kuliner kota Medan</h3>
+			<h1 id ="papa"><a href = "../homepage.html">Peta Pariwisata dan Kuliner Kota Medan</a></h1>
 			<div class="content">
 				<div class="menu">
 					<p id="paragraf">Satu ruko yang terletak di Jalan Kirana I ini memang terkesan out of place. Di sela-sela ruko yang kebanyakan merupakan showroom mobil, tampil sebuah cafe dengan warna kuning merah dan design fasad yang menyolok.
