--- a/Datin Ong/datinongreview.html
+++ b/Datin Ong/datinongreview.html
@@ -5,14 +5,13 @@
 		<title>Peta Pariwisata dan Kuliner Medan</title>
 		<link rel="stylesheet" type="text/css"href="../homepage.css">
 		<link rel="stylesheet" type="text/css"href="../review.css">
-<link rel="stylesheet" type="css/txt" href="../5 star/style.css">
+        <link rel="stylesheet" type="text/css" href="../5 star/style.css">
   		<script type="text/javascript" src="../5 star/rating.js"></script>
 
 	</head>
 	<body>	
 		<div id ="container">
-			<h1 id ="papa"><a href = "../homepage.html">Peta Pariwisata dan Kuliner Medan</a></h1>
-			<h3>Peta Pariwisata dan Kuliner kota Medan</h3>
+			<h1 id ="papa"><a href = "../homepage.html">Peta Pariwisata dan Kuliner Kota Medan</a></h1>
 			<div class="content">
 				<div class="menu">
 					<p id="paragraf">Bagi pecinta kuliner peranakan, memang tidak banyak pilihan di kota Medan—apalagi yang menyuguhkan Bak Kut Teh (rasa asli, a.k.a. pake ‘porky’) di ruang ber-AC dengan standar café. Bisa dibilang, hanya Datin Ong lha satu-satunya.
