--- a/Ismud Park/ismudparkreview.html
+++ b/Ismud Park/ismudparkreview.html
@@ -5,14 +5,14 @@
 		<title>Peta Pariwisata dan Kuliner Medan</title>
 		<link rel="stylesheet" type="text/css"href="../homepage.css">
 		<link rel="stylesheet" type="text/css"href="../review.css">
-        <link rel="stylesheet" type="css/txt" href="../5 star/style.css">
+        <link rel="stylesheet" type="text/css" href="../5 star/style.css">
   		<script type="text/javascript" src="../5 star/rating.js"></script>
 
 	</head>
 	<body>	
 		
 		<div id ="container">
-			<h1 id ="papa"><a href = "../homepage.html">Peta Pariwisata dan Kuliner kota Medan</a></h1>
+			<h1 id ="papa"><a href = "../homepage.html">Peta Pariwisata dan Kuliner Kota Medan</a></h1>
 			<div class="content">
 				<div class="menu">
 					<p id="paragraf">Ismud, singkatan dari Iskandar Muda. Tempat nongkrong baru yang bernama Ismud Park ini sudah jelas beralamat di Jalan Iskandar Muda, beberapa meter di seberang Medan Plaza. Dari luar, design cafe ini tampak menyolok. Unik memang, karena konstruksi bangunan dan interior terinspirasi berat dari container yang sering nampak di pelabuhan.
