--- a/Lembur Kuring/lemburkuringreview.html
+++ b/Lembur Kuring/lemburkuringreview.html
@@ -5,18 +5,13 @@
 		<title>Peta Pariwisata dan Kuliner Medan</title>
 		<link rel="stylesheet" type="text/css"href="../homepage.css">
 		<link rel="stylesheet" type="text/css"href="../review.css">
-<link rel="stylesheet" type="css/txt" href="../5 star/style.css">
+        <link rel="stylesheet" type="text/css" href="../5 star/style.css">
   		<script type="text/javascript" src="../5 star/rating.js"></script>
 
 	</head>
 	<body>	
 		<div id ="container">
-<<<<<<< HEAD
-			<h1 id ="papa"><a href = "../homepage.html">Peta Pariwisata dan Kuliner Medan</a></h1>
-=======
-			<h1 id ="papa"><a href = "../homepage.html">Peta Pariwisata dan Kuliner kota Medan</a></h1>
->>>>>>> 4965b1699b2e7f9f9dd96ec9077bde5fbf642742
-			<h3>Peta Pariwisata dan Kuliner kota Medan</h3>
+			<h1 id ="papa"><a href = "../homepage.html">Peta Pariwisata dan Kuliner Kota Medan</a></h1>
 			<div class="content">
 				<div class="menu">
 					<p id="paragraf">Bagi sebagian besar masyarakat Medan, rumah makan ini ga butuh introduction lagi. Alkisah, rumah makan ini berawal dari sebuah warung kecil yang menjual makanan khas Sunda, terutama signature dishnya Ayam goreng Kalasan. Dari kesederhanaan resep ini, rumah makan yang kecil dulunya pindah ke lokasi yang berdekatan dengan airport, mencakup areal yang cukup luas dan dikelilingi kolam serta sebuah ‘kapal’ yang berhenti di dermaga buatan. We still remember back then, hal yang paling kami kenang masa itu ialah memberi makan ikan yang berada di kolam, how nostalgic!
